modified:   test-library-component.yaml 	modified:   test-service-component.yaml 	modified:   test-website-component.yaml

--- a/test-library-component.yaml
+++ b/test-library-component.yaml
@@ -4,7 +4,8 @@ metadata:
   name: test-library-component
   description: Test component for library
   tags:
-    - javascript
+    - python
+    - docs
     - test
   links:
     - url: https://example.com/user
