--- a/Components/test-service-component.yaml
+++ b/Components/test-service-component.yaml
@@ -37,4 +37,5 @@ spec:
   owner: team-b
   system: test-portal
   dependsOn: ['resource:test-db']
-  apiConsumedBy: ['api:test-api-1','api:test-api-2',]
+  providesApis:
+    - test-api-1
