--- a/Templates/test-template.yaml
+++ b/Templates/test-template.yaml
@@ -71,4 +71,4 @@ spec:
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-        catalogInfoPath: '/catalog-info.yaml'
+        catalogInfoPath: '/test-action-react-template/catalog-info.yaml'
