modified:   Templates/test-action/test-template.yaml

--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -94,7 +94,7 @@ spec:
         files:
           - file: "./src/App.tsx"
             find: "src/App.tsx"
-            replaceWith: name
+            replaceWith: ${{ parameters.name }}
       ## publish params
     - id: publish
       name: Publish
