--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -141,15 +141,16 @@ spec:
       name: Execute GitHub Action
       action: bs:trigger-webhook
       input:
-        url: https://api.github.com/repos/DonovanVA/test-action-react-template/dispatches
+        url: https://api.github.com/repos/${{ parameters.url }}
         payload: |
           {
             "event_type": "00-retrieve-secrets",
             "client_payload": {
-              "repo_url": "${{ parameters.repoUrl }}",
+              "repo_url": "https://github.com/${{ parameters.url }}",
               "github_token": "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"
             }
           }
         token: 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
+
 
    ##5. build and push using gh actions
