--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -141,8 +141,7 @@ spec:
       name: Execute GitHub Action
       action: bs:trigger-webhook
       input:
-        #url: ${{ parameters.repoUrl }}
-        url: https://api.github.com/repos/${{ parameters.repoUrl | replace('github.com', '') | replace('?owner=', '') | replace('&repo=', '/') }}/dispatch
+        url: https://api.github.com/repos/DonovanVA/test-action-react-template/dispatches
         payload: |
           {
             "event_type": "00-retrieve-secrets",
