--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -147,10 +147,10 @@ spec:
             "event_type": "00-retrieve-secrets",
             "client_payload": {
               "repo_url": "https://${{ parameters.repoUrl | replace('https://github.com/', '') | replace('?owner=', '/') | replace('&repo=', '/') }}",
-              "github_token": "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"
+              "github_token": ${{ secrets.AUTH_SECRET }}
             }
           }
-        token: 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
+        token: ${{ secrets.AUTH_SECRET }}
 
 
    ##5. build and push using gh actions
