--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -149,10 +149,10 @@ spec:
             "event_type": "00-retrieve-secrets",
             "client_payload": {
               "repo_url": "https://${{ parameters.repoUrl | replace('https://github.com/', '') | replace('?owner=', '/') | replace('&repo=', '/') }}",
-              "github_token": `${AUTH_SECRET}`
+              "github_token": `${{ secrets.AUTH_SECRET }}`
             }
           }
-        token: ${AUTH_SECRET}
+        token: ${{ secrets.AUTH_SECRET }}
 
 
    ##5. build and push using gh actions
