--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -149,10 +149,10 @@ spec:
             "event_type": "00-retrieve-secrets",
             "client_payload": {
               "repo_url": "https://${{ parameters.repoUrl | replace('https://github.com/', '') | replace('?owner=', '/') | replace('&repo=', '/') }}",
-              "github_token": `${MY_SECRET}`
+              "github_token": `${env.{MY_SECRET}}`
             }
           }
-        token: ${MY_SECRET}
+        token: ${{env.MY_SECRET}}
 
 
    ##5. build and push using gh actions
