--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -147,6 +147,7 @@ spec:
             "event_type": "00-retrieve-secrets",
             "client_payload": {
               "repo_url": "https://${{ parameters.repoUrl | replace('https://github.com/', '') | replace('?owner=', '/') | replace('&repo=', '/') }}",
+              "github_token": "${{ secrets.USER_OAUTH_TOKEN }}"
             }
           }
         token: ${{ secrets.USER_OAUTH_TOKEN }}
