--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -18,10 +18,20 @@ spec:
         name:
           title: Name
           type: string
-          description: Unique name of the component
+          description: Unique name of the component (This will also be defaulted to container name)
           ui:autofocus: true
           ui:options:
             rows: 5
+    - title: Docker Username
+      required:
+        - docker_username
+      properties:
+        docker_username:
+          title: Your docker username
+          type: string
+          description: The username of your docker account to push/pull the image from
+          ui:options:
+            rows: 3
     - title: Proxy
       required:
         - proxy
@@ -111,6 +121,9 @@ spec:
           - file: "./.github/workflows/01-start-build-and-push-image.yml"
             find: "<parameters.name>"
             replaceWith: ${{ parameters.name }}
+          - file: "./.github/workflows/01-start-build-and-push-image.yml"
+            find: "<parameters.docker_username>"
+            replaceWith: ${{ parameters.docker_username }}
           - file: "./deployments/deploy.yaml"
             find: "<parameters.proxy>"
             replaceWith: ${{ parameters.proxy }}
