--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -22,16 +22,6 @@ spec:
           ui:autofocus: true
           ui:options:
             rows: 5
-    - title: Docker Username
-      required:
-        - docker_username
-      properties:
-        docker_username:
-          title: Your docker username
-          type: string
-          description: The username of your docker account to push/pull the image from
-          ui:options:
-            rows: 3
     - title: Proxy
       required:
         - proxy
@@ -123,7 +113,7 @@ spec:
             replaceWith: ${{ parameters.name }}
           - file: "./.github/workflows/01-start-build-and-push-image.yml"
             find: "<parameters.docker_username>"
-            replaceWith: ${{ parameters.docker_username }}
+            replaceWith: donnyvan ## username here
           - file: "./deployments/deploy.yaml"
             find: "<parameters.proxy>"
             replaceWith: ${{ parameters.proxy }}
