--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -132,13 +132,16 @@ spec:
           - file: "./.github/workflows/01-start-build-and-push-image.yml"
             find: "<parameters.name>"
             replaceWith: ${{ parameters.name }}
+            ## 3. Deploy specs
           - file: "./deployments/deploy.yaml"
             find: "<parameters.proxy>"
             replaceWith: ${{ parameters.proxy }}
-          - file: "./deployments/deploy.yaml"
+            ## 4. kube specs
+          - file: "./.github/workflows/02-apply-deploy.yml"
             find: "<parameters.resource_group>"
             replaceWith: ${{ parameters.resource_group }}
-          - file: "./deployments/deploy.yaml"
+
+          - file: "./.github/workflows/02-apply-deploy.yml"
             find: "<parameters.clustername>"
             replaceWith: ${{ parameters.clustername }}
 
