--- a/Templates/test-action/test-template.yaml
+++ b/Templates/test-action/test-template.yaml
@@ -19,6 +19,8 @@ spec:
           title: Name
           type: string
           description: Unique name of the component (This will also be defaulted to container name)
+          maxLength: 20
+          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
           ui:autofocus: true
           ui:options:
             rows: 5
@@ -30,6 +32,8 @@ spec:
           title: Proxy name
           type: string
           description: The name of your proxy for your app to be serviced on
+          maxLength: 20
+          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
           ui:options:
             rows: 3
     - title: Cluster name
@@ -40,6 +44,8 @@ spec:
           title: Cluster name
           type: string
           description: The name of your cluster for your app to be deployed
+          maxLength: 20
+          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
           ui:options:
             rows: 3
     - title: Resource Group name
@@ -50,6 +56,8 @@ spec:
           title: Resource Group name
           type: string
           description: The resource group of your cluster
+          maxLength: 20
+          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
           ui:options:
             rows: 3
 
